# motor_1404-prop-T4030-2s-simu-empirical-model

./: CMakeLists.txt  GROUP_CALC.md  GROUP_SPEC.md  MOTOR_CALC.md  README.md
datasheets/: Brother-Hobby-1404_4600KV_Blane_Townsend.csv
includes/: motor.h  motor_lut.h
octave/: motor_model.m
src/: motor.cpp  motor_model.m  test_motor.cpp
